  * Change project homepage URL to https.
  * Use literal tab characters in order to make m_abook and m_goobook
    modules work without requiring GNU sed(1).  Thanks to Raf Czlonka.
  * Add tests for m_abook.
  * Upgrade Standards-Version to 4.1.5.
    - Declare Rules-Requires-Root: no.
  * Add update-version target to update version in all autotool files.
  * m_abook: Fix a shellcheck warning.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 22 Jul 2018 16:12:24 +0200

lbdb (0.47) unstable; urgency=medium

  * Add .gitignore based on code by Lucas Hoffmann.
  * Upgrade debhelper to v11.
  * Replace legacy `...` by $(...) in sh scripts.
  * Update copyright notice.
  * Add test_perl to check perl syntax.
  * Add some perl libs <!nocheck> to Build-Depends, to be able do
    perl syntax check.
  * Replace undefined $rv by $?.
  * Make the database file for m_inmail/lbdb-fetchaddr configurable.
  * Add LBDB_OVERRIDE_METHODS, OVERIDE_MUTTALIAS_FILES variables for
    testing.
  * Add a test suite.
    - Add a test for m_muttalias.
  * m_muttalias: rewrite sed regex as ERE, which should be more POSIX
    compatible and should work on non GNU sed, too.
  * lbdbq: Remove whitespace from number of matches to become more
    portable.
  * Add debian testsuite, calling lbdb testsuite.

 -- Roland Rosenfeld <roland@debian.org>  Mon, 02 Apr 2018 18:35:21 +0200

lbdb (0.46) unstable; urgency=medium

  * Add new module m_mu (maildir-utils), provided by Timothy Bourke.
  * Upgrade to Standards-Version 4.1.3 (no changes).

 -- Roland Rosenfeld <roland@debian.org>  Sun, 14 Jan 2018 18:24:08 +0100

lbdb (0.45.3) unstable; urgency=medium

  * Add Vcs-* headers pointing to github repository.
  * Fix file move from lbdb to elpa-lbdb on binary-arch build target.

 -- Roland Rosenfeld <roland@debian.org>  Mon, 04 Dec 2017 20:11:42 +0100

lbdb (0.45.2) unstable; urgency=medium

  * Remove ldbd-pkg.el in clean target.
  * debian/lbdb.maintscript: rm_conffile 50lbdb.el.