@@ -127,7 +127,8 @@ else
   exit 1
 fi
 
-if $fetchaddr $additional_param -d "$datefmt" $hdrlist $charset >> "$db" ; then
+if $fetchaddr "$additional_param" -d "$datefmt" "$hdrlist" "$charset" >> "$db"
+then
   touch "$db.dirty"
 fi
 
